[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art Assets/Old art/NormalEnemy.png" type="Texture" id=1]
[ext_resource path="res://src/NormalEnemy/NormalEnemy.gd" type="Script" id=2]
[ext_resource path="res://Art Assets/Old art/HPBarUnder.png" type="Texture" id=4]
[ext_resource path="res://Art Assets/Old art/HPBarProgress.png" type="Texture" id=5]
[ext_resource path="res://Art Assets/Old art/HPBarOver.png" type="Texture" id=6]


[sub_resource type="CapsuleShape2D" id=1]
radius = 106.619
height = 21.526

[sub_resource type="CapsuleShape2D" id=2]
radius = 124.329
height = 18.4503

[sub_resource type="CircleShape2D" id=3]
radius = 1009.76

[sub_resource type="Animation" id=4]
resource_name = "BackNForth"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 400, 0 ), Vector2( 0, 0 ) ]
}

[node name="NormalEnemy" type="Node2D"]
script = ExtResource( 2 )

[node name="AniNode" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="AniNode"]
position = Vector2( 3.63798e-12, -15.749 )
texture = ExtResource( 1 )

[node name="EnemyBody" type="KinematicBody2D" parent="AniNode"]

[node name="EnemyCollider" type="CollisionShape2D" parent="AniNode/EnemyBody"]
position = Vector2( 0.5, -10.5 )
shape = SubResource( 1 )

[node name="HealthBar" type="Control" parent="AniNode"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -126.704
margin_top = -204.29
margin_right = -126.704
margin_bottom = -204.29
rect_scale = Vector2( 0.13, 0.13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="AniNode/HealthBar"]
anchor_right = 0.367188
anchor_bottom = 0.278333
margin_left = 284.977
margin_top = 134.321
margin_right = 1634.98
margin_bottom = 434.321
max_value = 60.0
value = 60.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.345098, 0.254902, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="AniNode/HealthBar"]
anchor_right = 0.367188
anchor_bottom = 0.278333
margin_left = 284.977
margin_top = 134.321
margin_right = 1634.98
margin_bottom = 434.321
max_value = 60.0
value = 60.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.870588, 0.635294, 0.564706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="AniNode/HealthBar"]

[node name="ShootTimer" type="Timer" parent="AniNode"]
wait_time = 1.8
one_shot = true

[node name="NormalEnemyArea" type="Area2D" parent="AniNode"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AniNode/NormalEnemyArea"]
position = Vector2( 1.16742, -10.5 )
shape = SubResource( 2 )

[node name="ShootRange" type="Area2D" parent="AniNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AniNode/ShootRange"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AniNode"]
autoplay = "BackNForth"
method_call_mode = 1
anims/BackNForth = SubResource( 4 )
[connection signal="body_entered" from="AniNode/NormalEnemyArea" to="." method="_on_NormalEnemyArea_body_entered"]
[connection signal="body_entered" from="AniNode/ShootRange" to="." method="_on_ShootRange_body_entered"]
[connection signal="body_exited" from="AniNode/ShootRange" to="." method="_on_ShootRange_body_exited"]
